--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,46 +2,77 @@
 # Polygon-4
 #
 
-################################################################################
-
-########################################
-# FUNCTION set_output_directory
-########################################
-function(set_output_directory target dir)
-    if (MSVC OR XCODE)
-        foreach(conf ${CMAKE_CONFIGURATION_TYPES})
-            string(TOUPPER ${conf} conf2)
-            set_target_properties(${target} PROPERTIES LIBRARY_OUTPUT_DIRECTORY_${conf2} ${dir})
-            set_target_properties(${target} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${conf2} ${dir})
-            set_target_properties(${target} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_${conf2} ${dir})
-        endforeach()
-    else() # single configuration
-        add_custom_command(TARGET ${target} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory ${dir})
-        set_target_properties(${target} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${dir})
-        set_target_properties(${target} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${dir})
-        set_target_properties(${target} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${dir})
-    endif()
-endfunction(set_output_directory)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 ################################################################################
-
 
 ########################################
 # LIBRARY common
 ########################################
 
-add_library(common common/memory.cpp)
+add_library             (memory Tools/Memory.cpp)
+project_group           (memory Tools)
 
-file(GLOB engine_inc "${CMAKE_SOURCE_DIR}/include/polygon4/*")
-file(GLOB engine_src "engine/*")
+
+########################################
+# LIBRARY hotpatchable
+########################################
+
+set(hotpatchable_src
+    Tools/Hotpatch.cpp
+    Tools/Hotpatch.h
+    ${CMAKE_SOURCE_DIR}/include/polygon4/Hotpatch.h
+)
+add_library             (hotpatchable OBJECT ${hotpatchable_src})
+project_group           (hotpatchable Tools)
 
 
 ########################################
 # SHARED LIBRARY Engine
 ########################################
 
-add_library(Engine SHARED ${engine_src} ${engine_inc})
-target_link_libraries(Engine common ${Boost_LIBRARIES})
-set_output_directory(Engine ${library_dir})
+file(GLOB engine_inc "${CMAKE_SOURCE_DIR}/include/polygon4/*")
+
+set(engine_src
+    Engine.cpp
+    Mods.cpp
+    Test.cpp
+
+    Tools/Logger.cpp
+    Tools/Logger.h
+
+    $<TARGET_OBJECTS:hotpatchable>
+)
+
+add_library             (Engine SHARED ${engine_src} ${engine_inc})
+target_link_libraries   (Engine memory ${Boost_LIBRARIES} dbghelp)
+set_output_directory    (Engine ${library_dir})
+get_target_property     (name Engine NAME)
+set_target_properties   (Engine PROPERTIES PDB_NAME ${name}.${POLYGON4_ARCH})
+
+
+########################################
+# EXECUTABLE Injector
+########################################
+
+set(injector_src
+    Tools/Injector.cpp
+    Tools/Hotpatch.h
+)
+
+add_executable          (injector ${injector_src})
+target_link_libraries   (injector ${Boost_LIBRARIES})
+set_output_directory    (injector ${library_dir})
+project_group           (injector Tools)
+
+
+########################################
+# EXECUTABLE Fix PDB
+########################################
+
+add_executable          (pdbfix Tools/PdbFix.cpp)
+target_link_libraries   (pdbfix dbghelp)
+set_output_directory    (pdbfix ${library_dir})
+project_group           (pdbfix Tools)
 
 ################################################################################
