Update game start sequence.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,18 @@ project_group           (hotpatchable Tools)
 
 
 ########################################
+# LIBRARY logger
+########################################
+
+set(logger_src
+    Tools/Logger.cpp
+    Tools/Logger.h
+)
+add_library             (logger ${logger_src})
+project_group           (logger Tools)
+
+
+########################################
 # SHARED LIBRARY Engine
 ########################################
 
@@ -44,17 +56,12 @@ file(GLOB engine_src "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE
 
 set(engine_src
     ${engine_src}
-    
     API.i
-
-    Tools/Logger.cpp
-    Tools/Logger.h
-
     $<TARGET_OBJECTS:hotpatchable>
 )
 
 add_library             (Engine SHARED ${engine_src} ${engine_inc})
-target_link_libraries   (Engine DatabaseManager lua ${Boost_LIBRARIES} dbghelp)
+target_link_libraries   (Engine DatabaseManager logger lua ${Boost_LIBRARIES} dbghelp)
 add_dependencies        (Engine api_lua clean_hotpatch)
 set_output_directory    (Engine ${library_dir})
 get_target_property     (name Engine NAME)
