--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,7 +29,7 @@ project_group           (api_lua API)
 set(hotpatchable_src
     Tools/Hotpatch.cpp
     Tools/Hotpatch.h
-    ${CMAKE_SOURCE_DIR}/include/polygon4/Hotpatch.h
+    ${CMAKE_SOURCE_DIR}/include/Polygon4/Hotpatch.h
 )
 add_library             (hotpatchable OBJECT ${hotpatchable_src})
 project_group           (hotpatchable Tools)
@@ -51,7 +51,7 @@ project_group           (logger Tools)
 # SHARED LIBRARY Engine
 ########################################
 
-file(GLOB_RECURSE engine_inc "${CMAKE_SOURCE_DIR}/include/polygon4/*")
+file(GLOB_RECURSE engine_inc "${CMAKE_SOURCE_DIR}/include/Polygon4/*")
 file(GLOB engine_src "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 
 set(engine_src
@@ -61,7 +61,7 @@ set(engine_src
 )
 
 add_library             (Engine SHARED ${engine_src} ${engine_inc})
-target_link_libraries   (Engine DatabaseManager logger lua ${Boost_LIBRARIES} dbghelp)
+target_link_libraries   (Engine DataManager logger lua ${Boost_LIBRARIES} dbghelp)
 add_dependencies        (Engine api_lua clean_hotpatch)
 set_output_directory    (Engine ${library_dir})
 get_target_property     (name Engine NAME)
