--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,10 +67,12 @@ check_type_size("void *" SIZEOF_VOID_P)
 if (SIZEOF_VOID_P EQUAL 8)
     set(X64 1)
     set(POLYGON4_ARCH "64")
+    set(POLYGON4_ARCH_DIR_NAME "64")
     set(POLYGON4_ARCH_FULL "x64")
 elseif (SIZEOF_VOID_P EQUAL 4)
     set(X86 1)
     set(POLYGON4_ARCH "86")
+    set(POLYGON4_ARCH_DIR_NAME "32")
     set(POLYGON4_ARCH_FULL "x86")
 else()
     message(FATAL_ERROR "Cannot determine target architecture")
