Simplify build system.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,15 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 ################################################################################
 
+#######################################
+# FUNCTION project_group
+#######################################
+
+function(project_group target name)
+    set_target_properties(${target} PROPERTIES FOLDER ${name})
+endfunction(project_group)
+
+
 ########################################
 # LIBRARY logger
 ########################################
@@ -17,7 +26,7 @@ set(logger_src
 )
 add_library             (logger ${logger_src})
 target_link_libraries   (logger pvt.cppan.demo.boost.log)
-project_group           (logger Tools)
+project_group           (logger tools)
 
 
 ########################################
@@ -31,9 +40,11 @@ set(api_name ScriptAPI)
 #    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${api_name}.i
 #)
 add_custom_target(${api_name}_lua
-    COMMAND ${SWIG_EXECUTABLE} -c++ -lua -o ${CMAKE_CURRENT_BINARY_DIR}/${api_name}_lua.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${api_name}.i
+    COMMAND ${SWIG_EXECUTABLE} -c++ -lua -o ${CMAKE_CURRENT_BINARY_DIR}/${api_name}_lua.cpp2 ${CMAKE_CURRENT_SOURCE_DIR}/${api_name}.i
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/${api_name}_lua.cpp2 ${CMAKE_CURRENT_BINARY_DIR}/${api_name}_lua.cpp
     COMMENT "Generating ${CMAKE_CURRENT_BINARY_DIR}/${api_name}_lua.cpp"
 )
+project_group(${api_name}_lua misc)
 set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/${api_name}_lua.cpp PROPERTIES
     HEADER_FILE_ONLY True
     GENERATED True
@@ -58,11 +69,6 @@ target_link_libraries   (Engine logger data_manager dbghelp
     pvt.cppan.demo.lua
 )
 add_dependencies        (Engine clean_hotpatch ${api_name}_lua)
-set_output_directory    (Engine ${library_dir})
-get_target_property     (name Engine NAME)
-set_target_properties   (Engine PROPERTIES OUTPUT_NAME ${name}.${POLYGON4_ARCH_FULL})
-set_target_properties   (Engine PROPERTIES PDB_NAME ${name}.${POLYGON4_ARCH_FULL})
-target_compile_definitions(Engine PRIVATE -DPOLYGON4_ENGINE)
 
 add_custom_command(TARGET Engine POST_BUILD
     COMMAND pdbfix $<TARGET_FILE:Engine>
@@ -71,8 +77,8 @@ add_custom_command(TARGET Engine POST_BUILD
 
 if (WIN32)
     add_custom_command(TARGET Engine POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Engine> ${CMAKE_SOURCE_DIR}/../../Binaries/Win${POLYGON4_ARCH_DIR_NAME}/
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_PDB_FILE:Engine> ${CMAKE_SOURCE_DIR}/../../Binaries/Win${POLYGON4_ARCH_DIR_NAME}/
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:Engine> ${CMAKE_SOURCE_DIR}/../../Binaries/Win64/
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_PDB_FILE:Engine> ${CMAKE_SOURCE_DIR}/../../Binaries/Win64/
     )
 endif()
 
@@ -82,11 +88,11 @@ file(GENERATE
     CONTENT $<TARGET_PROPERTY:Engine,INTERFACE_INCLUDE_DIRECTORIES>
 )
 file(GENERATE
-    OUTPUT ${PROJECT_BINARY_DIR}/data_manager.txt
+    OUTPUT ${PROJECT_BINARY_DIR}/data_manager_$<CONFIG>.txt
     CONTENT $<TARGET_FILE:data_manager>
 )
 file(GENERATE
-    OUTPUT ${PROJECT_BINARY_DIR}/schema.txt
+    OUTPUT ${PROJECT_BINARY_DIR}/schema_$<CONFIG>.txt
     CONTENT $<TARGET_FILE:schema>
 )
 
@@ -97,8 +103,7 @@ file(GENERATE
 
 add_executable          (pdbfix Tools/PdbFix.cpp)
 target_link_libraries   (pdbfix dbghelp pvt.cppan.demo.boost.filesystem)
-set_output_directory    (pdbfix ${library_dir})
-project_group           (pdbfix Tools)
+project_group           (pdbfix tools)
 
 
 ########################################
@@ -106,8 +111,7 @@ project_group           (pdbfix Tools)
 ########################################
 
 add_executable          (fixproject Tools/FixProject.cpp)
-set_output_directory    (fixproject ${library_dir})
-project_group           (fixproject Tools)
+project_group           (fixproject tools)
 
 
 ########################################
@@ -115,9 +119,9 @@ project_group           (fixproject Tools)
 ########################################
 
 add_custom_target(clean_hotpatch
-    COMMAND fixproject ${CMAKE_CURRENT_BINARY_DIR}/Engine.vcxproj.user ${name}.${POLYGON4_ARCH_FULL} ${library_dir}/${name}.${POLYGON4_ARCH_FULL}
+    COMMAND fixproject ${CMAKE_CURRENT_BINARY_DIR}/Engine.vcxproj.user Engine ${output_dir}/$(Configuration)/Engine
     DEPENDS fixproject
 )
-project_group           (clean_hotpatch Tools)
+project_group           (clean_hotpatch tools)
 
 ################################################################################
