--- a/cppan.yml
+++ b/cppan.yml
@@ -1,5 +1,5 @@
 local_settings:
     dependencies:
         - pvt.cppan.demo.lua: 5
-        - pvt.lzwdgc.polygon4.data_manager: master
+        - pvt.lzwdgc.polygon4.data_manager.data_manager: master
 
