--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,10 @@ endif(MSVC)
 
 set(CPPAN_USE_CACHE 0)
 set(CPPAN_BUILD_SHARED_LIBS 0)
-set(CPPAN_HIDE_LOCAL_DEPENDENCIES 1)
-set(LIBRARY_TYPE_loc_DataManager_data_manager_local SHARED)
-set(LIBRARY_TYPE_loc_DataManager_schema_local SHARED)
-#add_definitions(-DDATA_MANAGER_ALIGNED_ALLOCATOR=1)
+#set(CPPAN_HIDE_LOCAL_DEPENDENCIES 1)
+set(LIBRARY_TYPE_pvt_lzwdgc_polygon4_data_manager_data_manager_master SHARED)
+set(LIBRARY_TYPE_pvt_lzwdgc_polygon4_data_manager_schema_master SHARED)
+add_definitions(-DDATA_MANAGER_ALIGNED_ALLOCATOR=1)
 add_subdirectory(.cppan)
 
 add_definitions(-DUSE_LOGGER=1)
